force-app/main/default/objects/Timesheet__c/Timesheet__c.object-meta.xml
<CustomObject>
    <description>Represents a weekly timesheet for an employee. Contains time entries for a specific week.</description>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Timesheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>