force-app/main/default/objects/Timesheet__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager who approved this timesheet</description>
    <inlineHelpText>Select the approving manager</inlineHelpText>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Timesheets</relationshipLabel>
    <relationshipName>Approved_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>