force-app/main/default/objects/Timesheet__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee who logged this timesheet</description>
    <inlineHelpText>Select the employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>