force-app/main/default/objects/Timesheet__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <description>Total hours logged in this timesheet (rollup from entries)</description>
    <label>Total Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>