force-app/main/default/objects/Timesheet__c/fields/Week_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_End_Date__c</fullName>
    <description>End date (Sunday) of the timesheet week</description>
    <label>Week End Date</label>
    <type>Date</type>
</CustomField>